day3.1/igw.tf
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.sandboxahk_vpc.id

  tags = {
    Name = "sandboxahk_vpc_igw"
  }
}
